src/parser.output
Nonterminals useless in grammar

    multiple_star_targets
    augassign
    dotted_as_names
    dotted_as_name
    dotted_name
    compare_op_bitwise_or_pair_plus
    compare_op_bitwise_or_pair
    eq_bitwise_or
    noteq_bitwise_or
    lte_bitwise_or
    lt_bitwise_or
    gte_bitwise_or
    gt_bitwise_or
    notin_bitwise_or
    in_bitwise_or
    isnot_bitwise_or
    is_bitwise_or
    string
    strings
    del_stmt
    single_target
    single_subscript_attribute_target
    del_targets
    star_etc


Terminals unused in grammar

    KEY_IMPORT
    KEY_EXCEPT
    KEY_FINALLY
    KEY_IS
    KEY_LAMBDA
    KEY_AS
    KEY_DEL
    KEY_WITH
    KEY_YIELD
    OP_ASSIGN
    OP_LESS_THAN
    OP_GREATER_THAN
    OP_LESS_THAN_EQUAL
    OP_GREATER_THAN_EQUAL
    OP_EQUAL
    OP_NOT_EQUAL
    DELIM_LEFT_CURLY
    DELIM_RIGHT_CURLY
    DELIM_ASSIGN_ADD
    DELIM_ASSIGN_SUBTRACT
    DELIM_ASSIGN_MULTIPLY
    DELIM_ASSIGN_DIVIDE
    DELIM_ASSIGN_FLOOR_DIVIDE
    DELIM_ASSIGN_MODULO
    DELIM_ASSIGN_BITWISE_AND
    DELIM_ASSIGN_BITWISE_OR
    DELIM_ASSIGN_BITWISE_XOR
    DELIM_ASSIGN_RIGHT_SHIFT
    DELIM_ASSIGN_LEFT_SHIFT
    DELIM_ASSIGN_POWER
    STRING_LITERAL
    DUNDER_INIT
    DUNDER_NAME
    DUNDER_MAIN
    WILDCARD_UNDERSCORE


Rules useless in grammar

  166 multiple_star_targets: star_targets DELIM_ASSIGN
  167                      | star_targets DELIM_ASSIGN multiple_star_targets

  168 augassign: DELIM_ASSIGN_ADD
  169          | DELIM_ASSIGN_SUBTRACT
  170          | DELIM_ASSIGN_MULTIPLY
  171          | DELIM_ASSIGN_DIVIDE
  172          | DELIM_ASSIGN_MODULO
  173          | DELIM_ASSIGN_BITWISE_AND
  174          | DELIM_ASSIGN_BITWISE_OR
  175          | DELIM_ASSIGN_BITWISE_XOR
  176          | DELIM_ASSIGN_LEFT_SHIFT
  177          | DELIM_ASSIGN_RIGHT_SHIFT
  178          | DELIM_ASSIGN_POWER
  179          | DELIM_ASSIGN_FLOOR_DIVIDE

  180 dotted_as_names: dotted_as_name
  181                | dotted_as_name DELIM_COMMA dotted_as_names

  182 dotted_as_name: dotted_name
  183               | dotted_name KEY_AS NAME

  184 dotted_name: dotted_name DELIM_DOT NAME
  185            | NAME

  186 comparison: bitwise_or compare_op_bitwise_or_pair_plus

  187 compare_op_bitwise_or_pair_plus: compare_op_bitwise_or_pair compare_op_bitwise_or_pair_plus

  188 compare_op_bitwise_or_pair: eq_bitwise_or
  189                           | noteq_bitwise_or
  190                           | lte_bitwise_or
  191                           | lt_bitwise_or
  192                           | gte_bitwise_or
  193                           | gt_bitwise_or
  194                           | notin_bitwise_or
  195                           | in_bitwise_or
  196                           | isnot_bitwise_or
  197                           | is_bitwise_or

  198 eq_bitwise_or: OP_EQUAL bitwise_or

  199 noteq_bitwise_or: OP_NOT_EQUAL bitwise_or

  200 lte_bitwise_or: OP_LESS_THAN_EQUAL bitwise_or

  201 lt_bitwise_or: OP_LESS_THAN bitwise_or

  202 gte_bitwise_or: OP_GREATER_THAN_EQUAL bitwise_or

  203 gt_bitwise_or: OP_GREATER_THAN bitwise_or

  204 notin_bitwise_or: KEY_NOT KEY_IN bitwise_or

  205 in_bitwise_or: KEY_IN bitwise_or

  206 isnot_bitwise_or: KEY_IS KEY_NOT bitwise_or

  207 is_bitwise_or: KEY_IS bitwise_or

  208 atom: strings

  209 string: STRING_LITERAL

  210 strings: string strings


Rules useless in parser due to conflicts

   18 statement_newline: ENDMARKER


State 28 conflicts: 1 reduce/reduce
State 52 conflicts: 1 shift/reduce
State 181 conflicts: 1 shift/reduce
State 209 conflicts: 1 shift/reduce
State 234 conflicts: 1 shift/reduce


Grammar

    0 $accept: start_symbol $end

    1 start_symbol: file
    2             | interactive
    3             | eval

    4 newline_star: NEWLINE
    5             | NEWLINE newline_star

    6 file: ENDMARKER
    7     | statements ENDMARKER

    8 eval: expressions ENDMARKER
    9     | expressions newline_star ENDMARKER

   10 interactive: statement_newline

   11 statements: statement
   12           | statement statements

   13 statement: compound_stmt
   14          | simple_stmts

   15 statement_newline: compound_stmt NEWLINE
   16                  | simple_stmts
   17                  | NEWLINE
   18                  | ENDMARKER

   19 simple_stmts: simple_stmt NEWLINE
   20             | simple_stmt DELIM_SEMICOLON NEWLINE
   21             | simple_stmt DELIM_SEMICOLON simple_stmts

   22 simple_stmt: assignment
   23            | expressions
   24            | return_stmt
   25            | raise_stmt
   26            | KEY_PASS
   27            | assert_stmt
   28            | KEY_BREAK
   29            | KEY_CONTINUE
   30            | global_stmt
   31            | nonlocal_stmt

   32 compound_stmt: function_def
   33              | if_stmt
   34              | class_def
   35              | for_stmt
   36              | while_stmt

   37 assignment: NAME DELIM_COLON expression
   38           | NAME DELIM_COLON expression DELIM_ASSIGN annotated_rhs

   39 annotated_rhs: expressions

   40 return_stmt: KEY_RETURN
   41            | KEY_RETURN expressions

   42 raise_stmt: KEY_RAISE
   43           | KEY_RAISE expression KEY_FROM expression
   44           | KEY_RAISE expression

   45 global_stmt: KEY_GLOBAL comma_separated_name

   46 nonlocal_stmt: KEY_NONLOCAL comma_separated_name

   47 comma_separated_name: NAME
   48                     | NAME DELIM_COMMA comma_separated_name

   49 assert_stmt: KEY_ASSERT expression
   50            | KEY_ASSERT expression DELIM_COMMA expression

   51 block: NEWLINE INDENT statements DEDENT
   52      | simple_stmts

   53 class_def: class_def_raw

   54 class_arguments: DELIM_LEFT_PAREN DELIM_RIGHT_PAREN
   55                | DELIM_LEFT_PAREN arguments DELIM_RIGHT_PAREN

   56 class_def_raw: KEY_CLASS NAME DELIM_COLON block
   57              | KEY_CLASS NAME class_arguments DELIM_COLON block

   58 function_def: function_def_raw

   59 function_def_raw: KEY_DEF NAME DELIM_LEFT_PAREN params DELIM_RIGHT_PAREN DELIM_COLON block
   60                 | KEY_DEF NAME DELIM_LEFT_PAREN DELIM_RIGHT_PAREN DELIM_COLON block
   61                 | KEY_DEF NAME DELIM_LEFT_PAREN params DELIM_RIGHT_PAREN DELIM_ARROW DELIM_COLON block
   62                 | KEY_DEF NAME DELIM_LEFT_PAREN DELIM_RIGHT_PAREN DELIM_ARROW DELIM_COLON block

   63 params: parameters

   64 parameters: param_no_default_plus DELIM_COMMA param_with_default_plus
   65           | param_with_default_plus
   66           | param_no_default_plus
   67           | param_no_default_plus DELIM_COMMA
   68           | param_with_default_plus DELIM_COMMA

   69 param_no_default_plus: param
   70                      | param DELIM_COMMA param_no_default_plus

   71 param_with_default_plus: param default
   72                        | param default DELIM_COMMA param_with_default_plus

   73 param: NAME
   74      | NAME annotation

   75 annotation: DELIM_COLON expression

   76 default: DELIM_ASSIGN expression

   77 if_stmt: KEY_IF named_expression DELIM_COLON block elif_stmt
   78        | KEY_IF named_expression DELIM_COLON block
   79        | KEY_IF named_expression DELIM_COLON block else_block

   80 elif_stmt: KEY_ELIF named_expression DELIM_COLON block elif_stmt
   81          | KEY_ELIF named_expression DELIM_COLON block
   82          | KEY_ELIF named_expression DELIM_COLON block else_block

   83 else_block: KEY_ELSE DELIM_COLON block

   84 while_stmt: KEY_WHILE named_expression DELIM_COLON block
   85           | KEY_WHILE named_expression DELIM_COLON block else_block

   86 for_stmt: KEY_FOR star_targets KEY_IN expressions DELIM_COLON block
   87         | KEY_FOR star_targets KEY_IN expressions DELIM_COLON block else_block

   88 expressions: expression DELIM_COMMA expressions
   89            | expression
   90            | expression DELIM_COMMA

   91 expression: disjunction KEY_IF disjunction KEY_ELSE expression
   92           | disjunction

   93 star_named_expressions: star_named_expression
   94                       | star_named_expression DELIM_COMMA
   95                       | star_named_expression DELIM_COMMA star_named_expressions

   96 star_named_expression: named_expression

   97 disjunction: conjunction KEY_OR disjunction
   98            | conjunction

   99 conjunction: inversion KEY_AND conjunction
  100            | inversion

  101 inversion: KEY_NOT inversion
  102          | comparison

  103 comparison: bitwise_or

  104 bitwise_or: bitwise_or OP_BITWISE_OR bitwise_xor
  105           | bitwise_xor

  106 bitwise_xor: bitwise_xor OP_BITWISE_XOR bitwise_and
  107            | bitwise_and

  108 bitwise_and: bitwise_and OP_BITWISE_AND shift_expr
  109            | shift_expr

  110 shift_expr: shift_expr OP_LEFT_SHIFT sum
  111           | shift_expr OP_RIGHT_SHIFT sum
  112           | sum

  113 sum: sum OP_ADD term
  114    | sum OP_SUBTRACT term
  115    | term

  116 term: term OP_MULTIPLY factor
  117     | term OP_DIVIDE factor
  118     | term OP_FLOOR_DIVIDE factor
  119     | term OP_MODULO factor
  120     | term OP_AT factor
  121     | factor

  122 factor: OP_ADD factor
  123       | OP_SUBTRACT factor
  124       | OP_BITWISE_NOT factor
  125       | power

  126 power: primary OP_POWER factor
  127      | primary

  128 primary: primary DELIM_DOT NAME
  129        | primary DELIM_LEFT_PAREN DELIM_RIGHT_PAREN
  130        | primary DELIM_LEFT_PAREN arguments DELIM_RIGHT_PAREN
  131        | primary DELIM_LEFT_BRACKET slices DELIM_RIGHT_BRACKET
  132        | atom

  133 slices: slice
  134       | expression
  135       | slice DELIM_COMMA
  136       | expression DELIM_COMMA
  137       | slice DELIM_COMMA slices
  138       | expression DELIM_COMMA slices

  139 slice: DELIM_COLON
  140      | expression DELIM_COLON
  141      | DELIM_COLON expression
  142      | expression DELIM_COLON expression
  143      | DELIM_COLON DELIM_COLON
  144      | expression DELIM_COLON DELIM_COLON
  145      | DELIM_COLON expression DELIM_COLON
  146      | expression DELIM_COLON expression DELIM_COLON
  147      | DELIM_COLON DELIM_COLON expression
  148      | expression DELIM_COLON DELIM_COLON expression
  149      | DELIM_COLON expression DELIM_COLON expression
  150      | expression DELIM_COLON expression DELIM_COLON expression
  151      | named_expression

  152 atom: NAME
  153     | KEY_TRUE
  154     | KEY_FALSE
  155     | KEY_NONE
  156     | FLOAT_NUMBER
  157     | IMAGINARY_NUMBER
  158     | INTEGER
  159     | list
  160     | DELIM_ELLIPSIS

  161 list: DELIM_LEFT_BRACKET star_named_expressions DELIM_RIGHT_BRACKET
  162     | DELIM_LEFT_BRACKET DELIM_RIGHT_BRACKET

  163 star_targets: KEY_AWAIT

  164 named_expression: KEY_ASYNC

  165 arguments: KEY_TRY


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    KEY_FALSE (258) 154
    KEY_AWAIT (259) 163
    KEY_ELSE (260) 83 91
    KEY_IMPORT (261)
    KEY_PASS (262) 26
    KEY_NONE (263) 155
    KEY_BREAK (264) 28
    KEY_EXCEPT (265)
    KEY_IN (266) 86 87
    KEY_RAISE (267) 42 43 44
    KEY_TRUE (268) 153
    KEY_CLASS (269) 56 57
    KEY_FINALLY (270)
    KEY_IS (271)
    KEY_RETURN (272) 40 41
    KEY_AND (273) 99
    KEY_CONTINUE (274) 29
    KEY_FOR (275) 86 87
    KEY_LAMBDA (276)
    KEY_TRY (277) 165
    KEY_AS (278)
    KEY_DEF (279) 59 60 61 62
    KEY_FROM (280) 43
    KEY_NONLOCAL (281) 46
    KEY_WHILE (282) 84 85
    KEY_ASSERT (283) 49 50
    KEY_DEL (284)
    KEY_GLOBAL (285) 45
    KEY_NOT (286) 101
    KEY_WITH (287)
    KEY_ASYNC (288) 164
    KEY_ELIF (289) 80 81 82
    KEY_IF (290) 77 78 79 91
    KEY_OR (291) 97
    KEY_YIELD (292)
    OP_ADD (293) 113 122
    OP_SUBTRACT (294) 114 123
    OP_MULTIPLY (295) 116
    OP_POWER (296) 126
    OP_DIVIDE (297) 117
    OP_FLOOR_DIVIDE (298) 118
    OP_MODULO (299) 119
    OP_AT (300) 120
    OP_LEFT_SHIFT (301) 110
    OP_RIGHT_SHIFT (302) 111
    OP_BITWISE_AND (303) 108
    OP_BITWISE_OR (304) 104
    OP_BITWISE_XOR (305) 106
    OP_BITWISE_NOT (306) 124
    OP_ASSIGN (307)
    OP_LESS_THAN (308)
    OP_GREATER_THAN (309)
    OP_LESS_THAN_EQUAL (310)
    OP_GREATER_THAN_EQUAL (311)
    OP_EQUAL (312)
    OP_NOT_EQUAL (313)
    DELIM_LEFT_PAREN (314) 54 55 59 60 61 62 129 130
    DELIM_RIGHT_PAREN (315) 54 55 59 60 61 62 129 130
    DELIM_LEFT_BRACKET (316) 131 161 162
    DELIM_RIGHT_BRACKET (317) 131 161 162
    DELIM_LEFT_CURLY (318)
    DELIM_RIGHT_CURLY (319)
    DELIM_COMMA (320) 48 50 64 67 68 70 72 88 90 94 95 135 136 137 138
    DELIM_COLON (321) 37 38 56 57 59 60 61 62 75 77 78 79 80 81 82 83 84 85 86 87 139 140 141 142 143 144 145 146 147 148 149 150
    DELIM_DOT (322) 128
    DELIM_SEMICOLON (323) 20 21
    DELIM_ASSIGN (324) 38 76
    DELIM_ARROW (325) 61 62
    DELIM_ASSIGN_ADD (326)
    DELIM_ASSIGN_SUBTRACT (327)
    DELIM_ASSIGN_MULTIPLY (328)
    DELIM_ASSIGN_DIVIDE (329)
    DELIM_ASSIGN_FLOOR_DIVIDE (330)
    DELIM_ASSIGN_MODULO (331)
    DELIM_ASSIGN_BITWISE_AND (332)
    DELIM_ASSIGN_BITWISE_OR (333)
    DELIM_ASSIGN_BITWISE_XOR (334)
    DELIM_ASSIGN_RIGHT_SHIFT (335)
    DELIM_ASSIGN_LEFT_SHIFT (336)
    DELIM_ASSIGN_POWER (337)
    DELIM_ELLIPSIS (338) 160
    NAME (339) 37 38 47 48 56 57 59 60 61 62 73 74 128 152
    INDENT (340) 51
    DEDENT (341) 51
    NEWLINE (342) 4 5 15 17 19 20 51
    FLOAT_NUMBER (343) 156
    IMAGINARY_NUMBER (344) 157
    INTEGER (345) 158
    STRING_LITERAL (346)
    DUNDER_INIT (347)
    DUNDER_NAME (348)
    DUNDER_MAIN (349)
    ENDMARKER (350) 6 7 8 9 18
    WILDCARD_UNDERSCORE (351)


Nonterminals, with rules where they appear

    $accept (97)
        on left: 0
    start_symbol (98)
        on left: 1 2 3
        on right: 0
    newline_star (99)
        on left: 4 5
        on right: 5 9
    file (100)
        on left: 6 7
        on right: 1
    eval (101)
        on left: 8 9
        on right: 3
    interactive (102)
        on left: 10
        on right: 2
    statements (103)
        on left: 11 12
        on right: 7 12 51
    statement (104)
        on left: 13 14
        on right: 11 12
    statement_newline (105)
        on left: 15 16 17 18
        on right: 10
    simple_stmts (106)
        on left: 19 20 21
        on right: 14 16 21 52
    simple_stmt (107)
        on left: 22 23 24 25 26 27 28 29 30 31
        on right: 19 20 21
    compound_stmt (108)
        on left: 32 33 34 35 36
        on right: 13 15
    assignment (109)
        on left: 37 38
        on right: 22
    annotated_rhs (110)
        on left: 39
        on right: 38
    return_stmt (111)
        on left: 40 41
        on right: 24
    raise_stmt (112)
        on left: 42 43 44
        on right: 25
    global_stmt (113)
        on left: 45
        on right: 30
    nonlocal_stmt (114)
        on left: 46
        on right: 31
    comma_separated_name (115)
        on left: 47 48
        on right: 45 46 48
    assert_stmt (116)
        on left: 49 50
        on right: 27
    block (117)
        on left: 51 52
        on right: 56 57 59 60 61 62 77 78 79 80 81 82 83 84 85 86 87
    class_def (118)
        on left: 53
        on right: 34
    class_arguments (119)
        on left: 54 55
        on right: 57
    class_def_raw (120)
        on left: 56 57
        on right: 53
    function_def (121)
        on left: 58
        on right: 32
    function_def_raw (122)
        on left: 59 60 61 62
        on right: 58
    params (123)
        on left: 63
        on right: 59 61
    parameters (124)
        on left: 64 65 66 67 68
        on right: 63
    param_no_default_plus (125)
        on left: 69 70
        on right: 64 66 67 70
    param_with_default_plus (126)
        on left: 71 72
        on right: 64 65 68 72
    param (127)
        on left: 73 74
        on right: 69 70 71 72
    annotation (128)
        on left: 75
        on right: 74
    default (129)
        on left: 76
        on right: 71 72
    if_stmt (130)
        on left: 77 78 79
        on right: 33
    elif_stmt (131)
        on left: 80 81 82
        on right: 77 80
    else_block (132)
        on left: 83
        on right: 79 82 85 87
    while_stmt (133)
        on left: 84 85
        on right: 36
    for_stmt (134)
        on left: 86 87
        on right: 35
    expressions (135)
        on left: 88 89 90
        on right: 8 9 23 39 41 86 87 88
    expression (136)
        on left: 91 92
        on right: 37 38 43 44 49 50 75 76 88 89 90 91 134 136 138 140 141 142 144 145 146 147 148 149 150
    star_named_expressions (137)
        on left: 93 94 95
        on right: 95 161
    star_named_expression (138)
        on left: 96
        on right: 93 94 95
    disjunction (139)
        on left: 97 98
        on right: 91 92 97
    conjunction (140)
        on left: 99 100
        on right: 97 98 99
    inversion (141)
        on left: 101 102
        on right: 99 100 101
    comparison (142)
        on left: 103
        on right: 102
    bitwise_or (143)
        on left: 104 105
        on right: 103 104
    bitwise_xor (144)
        on left: 106 107
        on right: 104 105 106
    bitwise_and (145)
        on left: 108 109
        on right: 106 107 108
    shift_expr (146)
        on left: 110 111 112
        on right: 108 109 110 111
    sum (147)
        on left: 113 114 115
        on right: 110 111 112 113 114
    term (148)
        on left: 116 117 118 119 120 121
        on right: 113 114 115 116 117 118 119 120
    factor (149)
        on left: 122 123 124 125
        on right: 116 117 118 119 120 121 122 123 124 126
    power (150)
        on left: 126 127
        on right: 125
    primary (151)
        on left: 128 129 130 131 132
        on right: 126 127 128 129 130 131
    slices (152)
        on left: 133 134 135 136 137 138
        on right: 131 137 138
    slice (153)
        on left: 139 140 141 142 143 144 145 146 147 148 149 150 151
        on right: 133 135 137
    atom (154)
        on left: 152 153 154 155 156 157 158 159 160
        on right: 132
    list (155)
        on left: 161 162
        on right: 159
    star_targets (156)
        on left: 163
        on right: 86 87
    named_expression (157)
        on left: 164
        on right: 77 78 79 80 81 82 84 85 96 151
    arguments (158)
        on left: 165
        on right: 55 130


State 0

    0 $accept: . start_symbol $end

    KEY_FALSE           shift, and go to state 1
    KEY_PASS            shift, and go to state 2
    KEY_NONE            shift, and go to state 3
    KEY_BREAK           shift, and go to state 4
    KEY_RAISE           shift, and go to state 5
    KEY_TRUE            shift, and go to state 6
    KEY_CLASS           shift, and go to state 7
    KEY_RETURN          shift, and go to state 8
    KEY_CONTINUE        shift, and go to state 9
    KEY_FOR             shift, and go to state 10
    KEY_DEF             shift, and go to state 11
    KEY_NONLOCAL        shift, and go to state 12
    KEY_WHILE           shift, and go to state 13
    KEY_ASSERT          shift, and go to state 14
    KEY_GLOBAL          shift, and go to state 15
    KEY_NOT             shift, and go to state 16
    KEY_IF              shift, and go to state 17
    OP_ADD              shift, and go to state 18
    OP_SUBTRACT         shift, and go to state 19
    OP_BITWISE_NOT      shift, and go to state 20
    DELIM_LEFT_BRACKET  shift, and go to state 21
    DELIM_ELLIPSIS      shift, and go to state 22
    NAME                shift, and go to state 23
    NEWLINE             shift, and go to state 24
    FLOAT_NUMBER        shift, and go to state 25
    IMAGINARY_NUMBER    shift, and go to state 26
    INTEGER             shift, and go to state 27
    ENDMARKER           shift, and go to state 28

    start_symbol       go to state 29
    file               go to state 30
    eval               go to state 31
    interactive        go to state 32
    statements         go to state 33
    statement          go to state 34
    statement_newline  go to state 35
    simple_stmts       go to state 36
    simple_stmt        go to state 37
    compound_stmt      go to state 38
    assignment         go to state 39
    return_stmt        go to state 40
    raise_stmt         go to state 41
    global_stmt        go to state 42
    nonlocal_stmt      go to state 43
    assert_stmt        go to state 44
    class_def          go to state 45
    class_def_raw      go to state 46
    function_def       go to state 47
    function_def_raw   go to state 48
    if_stmt            go to state 49
    while_stmt         go to state 50
    for_stmt           go to state 51
    expressions        go to state 52
    expression         go to state 53
    disjunction        go to state 54
    conjunction        go to state 55
    inversion          go to state 56
    comparison         go to state 57
    bitwise_or         go to state 58
    bitwise_xor        go to state 59
    bitwise_and        go to state 60
    shift_expr         go to state 61
    sum                go to state 62
    term               go to state 63
    factor             go to state 64
    power              go to state 65
    primary            go to state 66
    atom               go to state 67
    list               go to state 68


State 1

  154 atom: KEY_FALSE .

    $default  reduce using rule 154 (atom)


State 2

   26 simple_stmt: KEY_PASS .

    $default  reduce using rule 26 (simple_stmt)


State 3

  155 atom: KEY_NONE .

    $default  reduce using rule 155 (atom)


State 4

   28 simple_stmt: KEY_BREAK .

    $default  reduce using rule 28 (simple_stmt)


State 5

   42 raise_stmt: KEY_RAISE .
   43           | KEY_RAISE . expression KEY_FROM expression
   44           | KEY_RAISE . expression

    KEY_FALSE           shift, and go to state 1
    KEY_NONE            shift, and go to state 3
    KEY_TRUE            shift, and go to state 6
    KEY_NOT             shift, and go to state 16
    OP_ADD              shift, and go to state 18
    OP_SUBTRACT         shift, and go to state 19
    OP_BITWISE_NOT      shift, and go to state 20
    DELIM_LEFT_BRACKET  shift, and go to state 21
    DELIM_ELLIPSIS      shift, and go to state 22
    NAME                shift, and go to state 69
    FLOAT_NUMBER        shift, and go to state 25
    IMAGINARY_NUMBER    shift, and go to state 26
    INTEGER             shift, and go to state 27

    $default  reduce using rule 42 (raise_stmt)

    expression   go to state 70
    disjunction  go to state 54
    conjunction  go to state 55
    inversion    go to state 56
    comparison   go to state 57
    bitwise_or   go to state 58
    bitwise_xor  go to state 59
    bitwise_and  go to state 60
    shift_expr   go to state 61
    sum          go to state 62
    term         go to state 63
    factor       go to state 64
    power        go to state 65
    primary      go to state 66
    atom         go to state 67
    list         go to state 68


State 6

  153 atom: KEY_TRUE .

    $default  reduce using rule 153 (atom)


State 7

   56 class_def_raw: KEY_CLASS . NAME DELIM_COLON block
   57              | KEY_CLASS . NAME class_arguments DELIM_COLON block

    NAME  shift, and go to state 71


State 8

   40 return_stmt: KEY_RETURN .
   41            | KEY_RETURN . expressions

    KEY_FALSE           shift, and go to state 1
    KEY_NONE            shift, and go to state 3
    KEY_TRUE            shift, and go to state 6
    KEY_NOT             shift, and go to state 16
    OP_ADD              shift, and go to state 18
    OP_SUBTRACT         shift, and go to state 19
    OP_BITWISE_NOT      shift, and go to state 20
    DELIM_LEFT_BRACKET  shift, and go to state 21
    DELIM_ELLIPSIS      shift, and go to state 22
    NAME                shift, and go to state 69
    FLOAT_NUMBER        shift, and go to state 25
    IMAGINARY_NUMBER    shift, and go to state 26
    INTEGER             shift, and go to state 27

    $default  reduce using rule 40 (return_stmt)

    expressions  go to state 72
    expression   go to state 53
    disjunction  go to state 54
    conjunction  go to state 55
    inversion    go to state 56
    comparison   go to state 57
    bitwise_or   go to state 58
    bitwise_xor  go to state 59
    bitwise_and  go to state 60
    shift_expr   go to state 61
    sum          go to state 62
    term         go to state 63
    factor       go to state 64
    power        go to state 65
    primary      go to state 66
    atom         go to state 67
    list         go to state 68


State 9

   29 simple_stmt: KEY_CONTINUE .

    $default  reduce using rule 29 (simple_stmt)


State 10

   86 for_stmt: KEY_FOR . star_targets KEY_IN expressions DELIM_COLON block
   87         | KEY_FOR . star_targets KEY_IN expressions DELIM_COLON block else_block

    KEY_AWAIT  shift, and go to state 73

    star_targets  go to state 74


State 11

   59 function_def_raw: KEY_DEF . NAME DELIM_LEFT_PAREN params DELIM_RIGHT_PAREN DELIM_COLON block
   60                 | KEY_DEF . NAME DELIM_LEFT_PAREN DELIM_RIGHT_PAREN DELIM_COLON block
   61                 | KEY_DEF . NAME DELIM_LEFT_PAREN params DELIM_RIGHT_PAREN DELIM_ARROW DELIM_COLON block
   62                 | KEY_DEF . NAME DELIM_LEFT_PAREN DELIM_RIGHT_PAREN DELIM_ARROW DELIM_COLON block

    NAME  shift, and go to state 75


State 12

   46 nonlocal_stmt: KEY_NONLOCAL . comma_separated_name

    NAME  shift, and go to state 76

    comma_separated_name  go to state 77


State 13

   84 while_stmt: KEY_WHILE . named_expression DELIM_COLON block
   85           | KEY_WHILE . named_expression DELIM_COLON block else_block

    KEY_ASYNC  shift, and go to state 78

    named_expression  go to state 79


State 14

   49 assert_stmt: KEY_ASSERT . expression
   50            | KEY_ASSERT . expression DELIM_COMMA expression

    KEY_FALSE           shift, and go to state 1
    KEY_NONE            shift, and go to state 3
    KEY_TRUE            shift, and go to state 6
    KEY_NOT             shift, and go to state 16
    OP_ADD              shift, and go to state 18
    OP_SUBTRACT         shift, and go to state 19
    OP_BITWISE_NOT      shift, and go to state 20
    DELIM_LEFT_BRACKET  shift, and go to state 21
    DELIM_ELLIPSIS      shift, and go to state 22
    NAME                shift, and go to state 69
    FLOAT_NUMBER        shift, and go to state 25
    IMAGINARY_NUMBER    shift, and go to state 26
    INTEGER             shift, and go to state 27

    expression   go to state 80
    disjunction  go to state 54
    conjunction  go to state 55
    inversion    go to state 56
    comparison   go to state 57
    bitwise_or   go to state 58
    bitwise_xor  go to state 59
    bitwise_and  go to state 60
    shift_expr   go to state 61
    sum          go to state 62
    term         go to state 63
    factor       go to state 64
    power        go to state 65
    primary      go to state 66
    atom         go to state 67
    list         go to state 68


State 15

   45 global_stmt: KEY_GLOBAL . comma_separated_name

    NAME  shift, and go to state 76

    comma_separated_name  go to state 81


State 16

  101 inversion: KEY_NOT . inversion

    KEY_FALSE           shift, and go to state 1
    KEY_NONE            shift, and go to state 3
    KEY_TRUE            shift, and go to state 6
    KEY_NOT             shift, and go to state 16
    OP_ADD              shift, and go to state 18
    OP_SUBTRACT         shift, and go to state 19
    OP_BITWISE_NOT      shift, and go to state 20
    DELIM_LEFT_BRACKET  shift, and go to state 21
    DELIM_ELLIPSIS      shift, and go to state 22
    NAME                shift, and go to state 69
    FLOAT_NUMBER        shift, and go to state 25
    IMAGINARY_NUMBER    shift, and go to state 26
    INTEGER             shift, and go to state 27

    inversion    go to state 82
    comparison   go to state 57
    bitwise_or   go to state 58
    bitwise_xor  go to state 59
    bitwise_and  go to state 60
    shift_expr   go to state 61
    sum          go to state 62
    term         go to state 63
    factor       go to state 64
    power        go to state 65
    primary      go to state 66
    atom         go to state 67
    list         go to state 68


State 17

   77 if_stmt: KEY_IF . named_expression DELIM_COLON block elif_stmt
   78        | KEY_IF . named_expression DELIM_COLON block
   79        | KEY_IF . named_expression DELIM_COLON block else_block

    KEY_ASYNC  shift, and go to state 78

    named_expression  go to state 83


State 18

  122 factor: OP_ADD . factor

    KEY_FALSE           shift, and go to state 1
    KEY_NONE            shift, and go to state 3
    KEY_TRUE            shift, and go to state 6
    OP_ADD              shift, and go to state 18
    OP_SUBTRACT         shift, and go to state 19
    OP_BITWISE_NOT      shift, and go to state 20
    DELIM_LEFT_BRACKET  shift, and go to state 21
    DELIM_ELLIPSIS      shift, and go to state 22
    NAME                shift, and go to state 69
    FLOAT_NUMBER        shift, and go to state 25
    IMAGINARY_NUMBER    shift, and go to state 26
    INTEGER             shift, and go to state 27

    factor   go to state 84
    power    go to state 65
    primary  go to state 66
    atom     go to state 67
    list     go to state 68


State 19

  123 factor: OP_SUBTRACT . factor

    KEY_FALSE           shift, and go to state 1
    KEY_NONE            shift, and go to state 3
    KEY_TRUE            shift, and go to state 6
    OP_ADD              shift, and go to state 18
    OP_SUBTRACT         shift, and go to state 19
    OP_BITWISE_NOT      shift, and go to state 20
    DELIM_LEFT_BRACKET  shift, and go to state 21
    DELIM_ELLIPSIS      shift, and go to state 22
    NAME                shift, and go to state 69
    FLOAT_NUMBER        shift, and go to state 25
    IMAGINARY_NUMBER    shift, and go to state 26
    INTEGER             shift, and go to state 27

    factor   go to state 85
    power    go to state 65
    primary  go to state 66
    atom     go to state 67
    list     go to state 68


State 20

  124 factor: OP_BITWISE_NOT . factor

    KEY_FALSE           shift, and go to state 1
    KEY_NONE            shift, and go to state 3
    KEY_TRUE            shift, and go to state 6
    OP_ADD              shift, and go to state 18
    OP_SUBTRACT         shift, and go to state 19
    OP_BITWISE_NOT      shift, and go to state 20
    DELIM_LEFT_BRACKET  shift, and go to state 21
    DELIM_ELLIPSIS      shift, and go to state 22
    NAME                shift, and go to state 69
    FLOAT_NUMBER        shift, and go to state 25
    IMAGINARY_NUMBER    shift, and go to state 26
    INTEGER             shift, and go to state 27

    factor   go to state 86
    power    go to state 65
    primary  go to state 66
    atom     go to state 67
    list     go to state 68


State 21

  161 list: DELIM_LEFT_BRACKET . star_named_expressions DELIM_RIGHT_BRACKET
  162     | DELIM_LEFT_BRACKET . DELIM_RIGHT_BRACKET

    KEY_ASYNC            shift, and go to state 78
    DELIM_RIGHT_BRACKET  shift, and go to state 87

    star_named_expressions  go to state 88
    star_named_expression   go to state 89
    named_expression        go to state 90


State 22

  160 atom: DELIM_ELLIPSIS .

    $default  reduce using rule 160 (atom)


State 23

   37 assignment: NAME . DELIM_COLON expression
   38           | NAME . DELIM_COLON expression DELIM_ASSIGN annotated_rhs
  152 atom: NAME .

    DELIM_COLON  shift, and go to state 91

    $default  reduce using rule 152 (atom)


State 24

   17 statement_newline: NEWLINE .

    $default  reduce using rule 17 (statement_newline)


State 25

  156 atom: FLOAT_NUMBER .

    $default  reduce using rule 156 (atom)


State 26

  157 atom: IMAGINARY_NUMBER .

    $default  reduce using rule 157 (atom)


State 27

  158 atom: INTEGER .

    $default  reduce using rule 158 (atom)


State 28

    6 file: ENDMARKER .
   18 statement_newline: ENDMARKER .

    $end      reduce using rule 6 (file)
    $end      [reduce using rule 18 (statement_newline)]
    $default  reduce using rule 6 (file)


State 29

    0 $accept: start_symbol . $end

    $end  shift, and go to state 92


State 30

    1 start_symbol: file .

    $default  reduce using rule 1 (start_symbol)


State 31

    3 start_symbol: eval .

    $default  reduce using rule 3 (start_symbol)


State 32

    2 start_symbol: interactive .

    $default  reduce using rule 2 (start_symbol)


State 33

    7 file: statements . ENDMARKER

    ENDMARKER  shift, and go to state 93


State 34

   11 statements: statement .
   12           | statement . statements
